# forge-memory

./: .gitignore  CLAUDE.md  FORGE-MEMORY-MCP-DESIGN.md  LICENSE  README.md  pyproject.toml
docs/: index.html
forge_memory/: __init__.py  __main__.py  config.py  db.py  models.py  search.py  server.py
forge_memory/migrations/: __init__.py  v001_initial.py  v002_search_enhanced.py
forge_memory/tools/: __init__.py  core.py  forge.py  relations.py  sessions.py
scripts/: install.sh
tests/: conftest.py  test_cli.py  test_config.py  test_db.py  test_integration.py  test_migrations.py  test_models.py  test_relations.py  test_search.py  test_server.py  test_tools_core.py  test_tools_forge.py  test_tools_sessions.py
